--- a/web/_css/estilo.css
+++ b/web/_css/estilo.css
@@ -41,10 +41,22 @@
 	}
         h1#cont {
             font-family: OCR A Std, monospace;
+            font-weight: normal;
             text-indent: 30px;
             color: #00346D;
             font-size: 26px;
             padding-top: -2px;
+            
+        }
+        
+        h2#cont {
+            font-family: OCR A Std, monospace;
+            font-size: 18px;
+            font-weight: 100;
+            text-indent: 30px;
+            color: #00346D;
+            padding-top: -10px;
+            margin-top: -15px;
             
         }
 
@@ -104,3 +116,85 @@
 	nav#menu a:hover {
 		color: #00346D;
 	}
+        
+        /* Formatação de imagens com legendas */
+	
+	figure.foto-legenda{
+		position: relative;
+		border: 8px solid white;
+	}
+
+	figure.foto-legenda img {
+		width: 100%;
+		height: 100%;
+                box-shadow: 1px 1px 4px black;
+	}
+
+	figure.foto-legenda figcaption {
+		opacity: 1;
+		position: absolute;
+		top: 0px;
+		background-color: rgba(0,0,0,0);
+		color: white;
+		width: 100%;
+		height: 100%;
+		padding: 10px;
+		box-sizing: border-box;
+		transition: opacity 1s,background-color 1s;
+	}
+
+	figure.foto-legenda:hover figcaption {
+            opacity: 1;
+	}
+
+        h1#fig {
+            font-family: OCR A Std, monospace;
+            font-weight: normal;
+            color: White;
+            font-size: 36px;
+            padding-top: 35%;    
+        }
+        
+        h2#fig {
+            font-family: OCR A Std, monospace;
+            font-weight: normal;
+            color: White;
+            font-size: 18px;
+            padding-top: -10px;
+        }
+        
+        h1#parceiros {
+            font-family: OCR A Std, monospace;
+            font-weight: normal;
+            text-indent: 30px;
+            color: #00346D;
+            font-size: 26px;
+            padding-top: -2px;
+            padding-bottom: -30px;
+        }
+        
+        div#parceiros{
+                margin-top: 20px;
+                background-color: white;
+                border: 3px #7BB9FF solid;
+                box-shadow: 1px 1px 4px black;
+        }
+
+        td {
+            padding-left: 30px;
+            padding-right: 30px;                
+        }
+
+        hr#cont{
+            color: #00346D;
+            border:1px #7BB9FF solid;
+                }
+             
+                img#parceiros{
+                           background-color: rgba(0,0,0,0);    
+                           transition: 1s;
+                }
+                
+                img#parceiros:hover {
+                    background-color: rgba(0,0,0,0.2);
+                }
