--- a/web/_css/estilo.css
+++ b/web/_css/estilo.css
@@ -217,7 +217,7 @@
                 nav#subjan ul {
                  list-style-type: none;
                  overflow: hidden;
-                 background-color: #ABD3FF;
+                 background-color: white;
                               }
 
                 nav#subjan li {
